<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">مرکز اطلاعات</string>
    <string name="app_version_format">ویرایش  <xliff:g id="version_name">%s</xliff:g></string>
    <string name="app_description">این برنامه اطلاعات مفیدی را در مورد بخشهای مختلف گوشی یا تبلت اندرویدی شما در اختیارتان قرار می‌دهد</string>
    <string name="app_programmer">برنامه‌نویس</string>
    <string name="masood_fallahpoor">مسعود فلاح‌پور</string>
    <string name="app_github_page">دسترسی به کد برنامه</string>
    <string name="app_web_site">وب سایت برنامه</string>
    <string name="font_path">fonts/Shabnam-Regular.ttf</string>
    <string name="app_github_address">https://github.com/MasoodFallahpoor/InfoCenter</string>
    <string name="app_web_site_address">http://fallahpoor.ir/InfoCenter</string>
    <string name="action_about_app">درباره</string>
    <string name="gen_item_manufacturer">سازنده</string>
    <string name="gen_item_brand">برند</string>
    <string name="gen_item_model">مدل</string>
    <string name="gen_item_bootloader_version">نسخهٔ راه‌انداز</string>
    <string name="gen_item_build_number">شمارهٔ ساخت</string>
    <string name="gen_item_fingerprint">اثر انگشت دستگاه</string>
    <string name="gen_item_imei">آی اِم ای آی</string>
    <string name="gen_item_serial_number">شماره سریال</string>
    <string name="gen_item_radio_firmware_version">نسخهٔ فیرم‌ور</string>
    <string name="gen_item_uptime">مدت کارکرد از آخرین راه‌اندازی</string>
    <string name="and_item_version">نسخه</string>
    <string name="and_item_name">نام</string>
    <string name="and_item_sdk_number">شمارهٔ اِس دی کِی</string>
    <string name="and_item_kernel_version">نسخهٔ هسته</string>
    <string name="and_sub_item_cupcake">کیک فنجانی</string>
    <string name="and_sub_item_donut">پیراشکی</string>
    <string name="and_sub_item_eclair">شیرینی خامه‌ای</string>
    <string name="and_sub_item_froyo">فرویو</string>
    <string name="and_sub_item_gb">نان زنجبیلی</string>
    <string name="and_sub_item_hc">شانهٔ عسل</string>
    <string name="and_sub_item_ics">بستنی نانی</string>
    <string name="and_sub_item_jb">آبنبات ژله‌ای</string>
    <string name="and_sub_item_kk">کیت کت</string>
    <string name="and_sub_item_lollipop">آبنبات چوبی</string>
    <string name="and_sub_item_marshmallow">مارشمالو</string>
    <string name="and_sub_item_nougat">نوقا</string>
    <string name="and_sub_item_oreo">اوریو</string>
    <string name="and_sub_item_pie">پای</string>
    <string name="cpu_item_manufacturer">سازنده</string>
    <string name="cpu_item_hardware">سخت‌افزار</string>
    <string name="cpu_item_processor">مدل</string>
    <string name="cpu_item_number_of_cores">تعداد هسته‌ها</string>
    <string name="cpu_item_frequency">فرکانس</string>
    <string name="cpu_item_features">ویژگی‌ها</string>
    <string name="cpu_sub_item_min">کمینه</string>
    <string name="cpu_sub_item_max">بیشینه</string>
    <string name="cpu_sub_item_mhz">مگاهرتز</string>
    <string name="cpu_sub_item_ghz">گیگاهرتز</string>
    <string name="cpu_sub_item_qualcomm">کوالکام</string>
    <string name="scr_item_resolution">وضوح</string>
    <string name="scr_item_orientation">جهت صفحه</string>
    <string name="scr_item_refresh_rate">نرخ بروزرسانی</string>
    <string name="scr_item_dots_per_inch">تعداد نقاط در اینچ</string>
    <string name="scr_item_horizontal_dpi">تعداد نقاط در اینچ افقی</string>
    <string name="scr_item_vertical_dpi">تعداد نقاط در اینچ عمودی</string>
    <string name="scr_sub_item_square">مربع</string>
    <string name="scr_sub_item_portrait">عمودی</string>
    <string name="scr_sub_item_landscape">افقی</string>
    <string name="scr_sub_item_hertz">هرتز</string>
    <string name="ram_item_total_ram">حافظهٔ کل</string>
    <string name="ram_item_free_ram">حافظهٔ آزاد</string>
    <string name="sto_item_int_storage">حافظهٔ داخلی</string>
    <string name="sto_item_ext_storage">حافظهٔ خارجی</string>
    <string name="sto_sub_item_ext_storage_not_available">حافظهٔ خارجی وجود ندارد و یا اطلاعات آن در دسترس نیست</string>
    <string name="sto_item_total_space">فضای کل</string>
    <string name="sto_item_free_space">فضای آزاد</string>
    <string name="cam_item_camera_quality">کیفیت دوربین</string>
    <string name="cam_item_antibanding">آنتی بندینگ</string>
    <string name="cam_item_auto_exposure_lock">قفل خودکار در معرض قرارگیری</string>
    <string name="cam_item_auto_white_balance_lock">قفل خودکار تعادل سفیدی</string>
    <string name="cam_item_color_effect">افکت رنگ</string>
    <string name="cam_item_flash">فلاش</string>
    <string name="cam_item_picture_size">ابعاد عکس</string>
    <string name="cam_item_picture_format">فرمت عکس</string>
    <string name="cam_item_supported_video_sizes">رزولوشن‌های فیلمبرداری</string>
    <string name="cam_item_scene_selection">انتخاب منظره</string>
    <string name="cam_item_zoom">بزرگنمایی</string>
    <string name="cam_item_video_snapshot">عکسبرداری از ویدئو</string>
    <string name="cam_item_focal_length">فاصلهٔ کانونی</string>
    <string name="cam_no_camera">این دستگاه دارای دوربین نیست و یا اجازه دسترسی به دوربین وجود ندارد.</string>
    <string name="cam_sub_item_back_camera_info_unavailable">اطلاعات دوربین پشت در دسترس نیست</string>
    <string name="cam_sub_item_front_camera_info_unavailable">اطلاعات دوربین جلو در دسترس نیست</string>
    <string name="cam_sub_item_mm">میلی متر</string>
    <string name="cam_sub_item_mp">مگاپیکسل</string>
    <string name="cam_item_front_camera">دوربین جلو</string>
    <string name="cam_item_back_camera">دوربین پشت</string>
    <string name="sen_item_accelerometer">شتاب‌سنج‌</string>
    <string name="sen_item_ambient_temperature">دماسنج</string>
    <string name="sen_item_game_rotation_vector">حسگر وکتور چرخش بازی</string>
    <string name="sen_item_geomagnetic_rotation_vector">حسگر وکتور چرخش ژئومغناطیسی</string>
    <string name="sen_item_gravity">جاذبه‌سنج</string>
    <string name="sen_item_gyroscope">ژیروسکوپ</string>
    <string name="sen_item_light">نورسنج</string>
    <string name="sen_item_linear_acceleration">شتاب‌سنج‌ خطی</string>
    <string name="sen_item_magnetic_field">حسگر میدان مغناطیسی</string>
    <string name="sen_item_pressure">فشارسنج</string>
    <string name="sen_item_proximity">حسگر مجاورت</string>
    <string name="sen_item_relative_humidity">رطوبت‌سنج‌</string>
    <string name="sen_item_rotation_vector">حسگر وکتور چرخش</string>
    <string name="sen_item_significant_motion">حسگر تکان قابل ‌توجه</string>
    <string name="sen_item_step_counter">گام‌شمار</string>
    <string name="sen_item_step_detector">حسگر تشخیص‌دهندهٔ گام</string>
    <string name="bat_item_charge_level">میزان شارژ</string>
    <string name="bat_item_health">وضعیت سلامتی</string>
    <string name="bat_item_plugged">در حال شارژ</string>
    <string name="bat_item_technology">تکنولوژی ساخت</string>
    <string name="bat_item_temperature">دما</string>
    <string name="bat_item_voltage">ولتاژ</string>
    <string name="bat_sub_item_charging">در حال شارژ</string>
    <string name="bat_sub_item_discharging">در حال تخلیه</string>
    <string name="bat_sub_item_good">سالم</string>
    <string name="bat_sub_item_dead">خراب</string>
    <string name="bat_sub_item_over_voltage">ولتاژ بیش از حد</string>
    <string name="bat_sub_item_overheat">دمای بیش از حد</string>
    <string name="bat_sub_item_yes_ac">بله از طریق جریان متناوب</string>
    <string name="bat_sub_item_yes_usb">بله از طریق یو اِس بی</string>
    <string name="bat_sub_item_yes_wireless">بله از طریق بی‌سیم</string>
    <string name="bat_sub_item_centigrade">درجهٔ سانتی‌ گراد</string>
    <string name="bat_sub_item_milli_volt">میلی ولت</string>
    <string name="bat_sub_item_lithium_ion">لیتیوم-یون</string>
    <string name="bat_sub_item_lithium_polymer">لیتیوم-پلیمر</string>
    <string name="wifi_item_connected_to_access_point">متصل به اکسس پوینت</string>
    <string name="wifi_item_ssid">شناسهٔ شبکه</string>
    <string name="wifi_item_ip_address">آدرس آی پی</string>
    <string name="wifi_item_mac_address">آدرس مک</string>
    <string name="wifi_item_signal_quality">کیفیت سیگنال</string>
    <string name="wifi_item_link_speed">سرعت اتصال به اکسس پوینت</string>
    <string name="wifi_sub_item_poor">ضعیف</string>
    <string name="wifi_sub_item_not_bad">نه‌چندان بد</string>
    <string name="wifi_sub_item_good">خوب</string>
    <string name="wifi_sub_item_very_good">بسیار خوب</string>
    <string name="wifi_sub_item_excellent">عالی</string>
    <string name="wifi_sub_item_mbps">مگابیت بر ثانیه</string>
    <string name="gpu_item_vendor">سازنده</string>
    <string name="gpu_item_model">مدل</string>
    <string name="gpu_item_opengl_version">نسخه اُپن جی ال</string>
    <string name="gpu_sub_item_qualcomm">کوالکام</string>
    <string name="blu_item_address">آدرس بلوتوث</string>
    <string name="blu_item_paired_devices">نام دستگاه‌های جفت شده</string>
    <string name="blu_item_name">نام بلوتوث</string>
    <string name="blu_sub_item_no_bluetooth">این دستگاه دارای بلوتوث نیست</string>
    <string name="blu_sub_item_no_paired_devices">این دستگاه با هیچ دستگاه دیگری جفت نشده است</string>
    <string name="gps_item_location">موقعیت</string>
    <string name="gps_sub_item_country">کشور</string>
    <string name="gps_sub_item_city">شهر</string>
    <string name="gps_sub_item_latitude">عرض جغرافیایی</string>
    <string name="gps_sub_item_longitude">طول جغرافیایی</string>
    <string name="gps_sub_item_obtaining_location">در حال به دست آوردن موقعیت</string>
    <string name="gps_sub_item_no_gps">این دستگاه دارای موقعیت‌یاب نیست و یا اجازه دسترسی به موقعیت داده نشده است.</string>
    <string name="sim_sub_item_no_sim">این دستگاه دارای سیم کارت نیست و یا اطلاعات آن در دسترس نیست.</string>
    <string name="sim_item_sim_card_serial_number">شماره سریال سیم کارت</string>
    <string name="sim_item_phone_type">نوع دستگاه</string>
    <string name="sim_item_network_type">نوع شبکه</string>
    <string name="sim_item_roaming">رومینگ</string>
    <string name="sim_item_operator_name">نام اوپراتور</string>
    <string name="sim_item_data_network">شبکهٔ دیتا</string>
    <string name="sim_sub_item_roaming_enabled">فعال</string>
    <string name="sim_sub_item_roaming_disabled">غیر فعال</string>
    <string name="sim_sub_item_cdma">CDMA</string>
    <string name="sim_sub_item_gsm">GSM</string>
    <string name="sim_sub_item_sip">SIP</string>
    <string name="sim_sub_item_data_connected">فعال</string>
    <string name="sim_sub_item_data_disconnected">غیر فعال</string>
    <string name="sim_sub_item_data_connecting">در حال فعال شدن</string>
    <string name="sim_sub_item_data_suspended">معلق</string>
    <string name="sim_sub_item_1xrtt">1xRTT</string>
    <string name="sim_sub_item_edge">EDGE</string>
    <string name="sim_sub_item_ehrdp">EHRDP</string>
    <string name="sim_sub_item_evdo">EVDO</string>
    <string name="sim_sub_item_gprs">GPRS</string>
    <string name="sim_sub_item_hsdpa">HSDPA</string>
    <string name="sim_sub_item_hspa">HSPA</string>
    <string name="fragment_title_general">مشخصات کلی</string>
    <string name="fragment_title_android">اندروید</string>
    <string name="fragment_title_cpu">پردازنده</string>
    <string name="fragment_title_screen">صفحه نمایش</string>
    <string name="fragment_title_ram">رم</string>
    <string name="fragment_title_storage">حافظه جانبی</string>
    <string name="fragment_title_camera">دوربین</string>
    <string name="fragment_title_sensors">حسگرها</string>
    <string name="fragment_title_battery">باتری</string>
    <string name="fragment_title_wifi">وای فای</string>
    <string name="fragment_title_gpu">پردازنده گرافیکی</string>
    <string name="fragment_title_bluetooth">بلوتوث</string>
    <string name="fragment_title_gps">موقعیت‌یاب</string>
    <string name="fragment_title_sim">سیم‌کارت</string>
    <string name="fragment_title_about">درباره</string>
</resources>