<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/navigation_graph"
            app:startDestination="@id/componentsFragment">

    <fragment
        android:id="@+id/componentsFragment"
        android:name="com.fallahpoor.infocenter.fragments.ComponentsFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_componentsFragment_to_cpuFragment"
            app:destination="@id/cpuFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_androidFragment"
            app:destination="@id/androidFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_batteryFragment"
            app:destination="@id/batteryFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_bluetoothFragment"
            app:destination="@id/bluetoothFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_cameraFragment"
            app:destination="@id/cameraFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_gpuFragment"
            app:destination="@id/gpuFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_ramFragment"
            app:destination="@id/ramFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_screenFragment"
            app:destination="@id/screenFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_sensorsFragment"
            app:destination="@id/sensorsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_simFragment"
            app:destination="@id/simFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_storageFragment"
            app:destination="@id/storageFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_wifiFragment"
            app:destination="@id/wifiFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_gpsFragment"
            app:destination="@id/gpsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_componentsFragment_to_generalFragment"
            app:destination="@id/generalFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/generalFragment"
        android:name="com.fallahpoor.infocenter.fragments.GeneralFragment"
        android:label="@string/fragment_title_general"/>
    <fragment
        android:id="@+id/androidFragment"
        android:name="com.fallahpoor.infocenter.fragments.AndroidFragment"
        android:label="@string/fragment_title_android"/>
    <fragment
        android:id="@+id/batteryFragment"
        android:name="com.fallahpoor.infocenter.fragments.battery.BatteryFragment"
        android:label="@string/fragment_title_battery"/>
    <fragment
        android:id="@+id/bluetoothFragment"
        android:name="com.fallahpoor.infocenter.fragments.bluetooth.BluetoothFragment"
        android:label="@string/fragment_title_bluetooth"/>
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.fallahpoor.infocenter.fragments.CameraFragment"
        android:label="@string/fragment_title_camera"/>
    <fragment
        android:id="@+id/gpuFragment"
        android:name="com.fallahpoor.infocenter.fragments.GpuFragment"
        android:label="@string/fragment_title_gpu"/>
    <fragment
        android:id="@+id/ramFragment"
        android:name="com.fallahpoor.infocenter.fragments.RamFragment"
        android:label="@string/fragment_title_ram"/>
    <fragment
        android:id="@+id/screenFragment"
        android:name="com.fallahpoor.infocenter.fragments.ScreenFragment"
        android:label="@string/fragment_title_screen"/>
    <fragment
        android:id="@+id/sensorsFragment"
        android:name="com.fallahpoor.infocenter.fragments.SensorsFragment"
        android:label="@string/fragment_title_sensors"/>
    <fragment
        android:id="@+id/simFragment"
        android:name="com.fallahpoor.infocenter.fragments.SimFragment"
        android:label="@string/fragment_title_sim"/>
    <fragment
        android:id="@+id/storageFragment"
        android:name="com.fallahpoor.infocenter.fragments.StorageFragment"
        android:label="@string/fragment_title_storage"/>
    <fragment
        android:id="@+id/wifiFragment"
        android:name="com.fallahpoor.infocenter.fragments.wifi.WifiFragment"
        android:label="@string/fragment_title_wifi"/>
    <fragment
        android:id="@+id/cpuFragment"
        android:name="com.fallahpoor.infocenter.fragments.CpuFragment"
        android:label="@string/fragment_title_cpu"/>
    <fragment
        android:id="@+id/gpsFragment"
        android:name="com.fallahpoor.infocenter.fragments.gps.GpsFragment"
        android:label="@string/fragment_title_gps"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.fallahpoor.infocenter.fragments.AboutFragment"
        android:label="@string/fragment_title_about"/>

</navigation>