<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalScrollbarPosition="left">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_about_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_about_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/fragment_about_logo_width"
            android:layout_height="@dimen/fragment_about_logo_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_about_primary_vertical_margin"
            android:src="@drawable/ic_about"
            tools:ignore="ContentDescription"/>

        <TextView
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_about_primary_vertical_margin"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/appVersionTextView"
            style="@style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_about_primary_vertical_margin"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/app_description"/>

        <TextView
            style="@style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_about_primary_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/app_programmer"/>

        <TextView
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_about_secondary_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/masood_fallahpoor"/>

        <TextView
            style="@style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_about_primary_vertical_margin"
            android:text="@string/app_github_page"/>

        <TextView
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_about_secondary_vertical_margin"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/app_github_address"/>

        <TextView
            style="@style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_about_primary_vertical_margin"
            android:text="@string/app_web_site"/>

        <TextView
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_about_secondary_vertical_margin"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/app_web_site_address"/>

    </LinearLayout>

</ScrollView>